--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Pocket PDF</title>
-
+    <link rel="icon" type="image/x-icon" href="/src/ico/favicon.ico">
 
     <!-- STYLE -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -34,6 +34,16 @@
 </head>
 
 <body>
+
+    <!-- WARNING -->
+    <div id="desktop-message" style="display:none; text-align: center; font-size: 14px; padding: 10px; background: rgb(255 223 169); color: #000;">
+        👋 Pocket PDF works best on your phone. Try it from your mobile browser!</p> 
+    </div>
+    <script>
+        if (!/Mobi|Android/i.test(navigator.userAgent)) {
+            document.getElementById('desktop-message').style.display = 'block';
+        }
+    </script>
 
     <!-- =========== -->
     <!--  MAIN PAGE  -->
@@ -133,6 +143,7 @@
                         <option value="100">100 dpi</option>
                         <option value="200" selected>200 dpi</option>
                         <option value="300">300 dpi</option>
+                        <option value="400">400 dpi</option>
                     </select>
                 </div>
                 <div>
@@ -175,7 +186,7 @@
 
         <div class="css-footer-section">
             <p>Coded with 🖤 by Theo Francart</p>
-            <a class="css-footer-link" href="https://www.google.com" target="_blank" aria-label="GitHub Profile">
+            <a class="css-footer-link" href="https://github.com/TheoKVA/pocket-pdf" target="_blank" aria-label="GitHub Repo">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98 96">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" fill="#24292f"/>
                 </svg>
@@ -280,7 +291,7 @@
             </div>
 
             <!-- New color level adjustment -->
-            <div class="flex-row">
+            <div class="flex-row" style="gap: 13px; justify-content: center;">
                 <div>
                     <p>Level adjustment</p>
                 </div>
@@ -338,20 +349,6 @@
         <div class="css-loading-circle"></div>
         <p id="loading-output">Loading...</p>
     </div>
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
 
 
 
