--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Pocket PDF</title>
-    <link rel="icon" type="image/x-icon" href="/src/ico/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="src/ico/favicon.ico">
 
     <!-- STYLE -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
