Minor CSS fixes

--- a/index.html
+++ b/index.html
@@ -59,24 +59,37 @@
             <div class="css-expandable-content" data-hidden="true">
                 <p style="text-align: center; font-size: 18px; font-weight: 600;">Pocket PDF</p>
                 <p style="text-align: center; font-size: 12px; margin-bottom: 7px;">Free & Private Mobile Document Scanner</p>
-                <p>Turn your phone into a document scanner and make clean PDFs – fast, free, and 100% private. 
+                <p>
+                    Turn your phone into a document scanner and make clean PDFs – fast, free, and 100% private. 
                     Pocket PDF works entirely in your browser, meaning your files never leave 
                     your device. No ads, no fees, no hassle.
-                <p> <b class="top-title">Private & Safe</b> 🔒 
-                    <br>All processing happens locally. No uploads, no worries.
+                </p>
+                <p class="top-title"> 
+                    <b>Private & Safe</b> 🔒 
+                </p>
+                <p>
+                    All processing happens locally. No uploads, no worries.
                     We don’t see your files, and neither does anyone else.
-                    <br><b class="top-title">No Fees, No Ads</b> 💸
-                    <br>It's a free Web App. A simple tool built for everyone – no catches.
-                    <br><b class="top-title">Easy to Use</b> 😇
-                    <br>Drag, drop, adjust, and create your perfect PDF in just a few clicks.
-                    <br><b class="top-title">Powerful Features</b> 💪
-                    <br>Grayscale, black-and-white, or full-color options.
+                </p>
+                <p class="top-title">
+                    <b>No Fees, No Ads</b> 💸
+                </p>
+                <p>
+                    It's a free Web App. A simple tool built for everyone – no catches.
+                </p>
+                <p class="top-title">
+                    <b>Easy to Use</b> 😇
+                </p>
+                <p>
+                    Drag, drop, adjust, and create your perfect PDF in just a few clicks.
+                </p>
+                <p class="top-title">
+                    <b>Powerful Features</b> 💪
+                </p>
+                <p>
+                    Grayscale, black-and-white, or full-color options.
                     Custom formats like A4, A5, receipts, or even cards.
                     DPI and compression adjustments for the perfect balance of quality and size.
-                    <!-- <br><b>How It Works</b>
-                    <br>- Upload or drag-and-drop your files.
-                    <br>- Make adjustments with our intuitive tools.
-                    <br>- Download your optimized PDF – instantly. -->
                 </p>
                 <style>
                     .top-title {
