Minor HTML patch

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         function checkIOS() {
             return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
         }
-        if (checkIOS()) eruda.init();
+        // if (checkIOS()) eruda.init();
     </script>
 
 </head>
@@ -57,8 +57,8 @@
 
         <div class="css-expandable-section">
             <div class="css-expandable-content" data-hidden="true">
-                <p style="text-align: center; font-size: 18px; font-weight: 600;">Pocket PDF</p>
-                <p style="text-align: center; font-size: 12px; margin-bottom: 7px;">Free & Private Mobile Document Scanner</p>
+                <p style="text-align: center; font-size: 20px; margin-bottom: 3px; font-weight: 600;"><b>📄 Pocket PDF</b></p>
+                <p style="text-align: center; font-size: 12px; margin-bottom: 9px;">Free & Private Mobile Document Scanner</p>
                 <p>
                     Turn your phone into a document scanner and make clean PDFs – fast, free, and 100% private. 
                     Pocket PDF works entirely in your browser, meaning your files never leave 
