--- a/index.html
+++ b/index.html
@@ -154,16 +154,17 @@
                     <label for="export-quality-select">Resolution</label>
                     <select id="export-quality-select" class="css-input css-select">
                         <option value="100">100 dpi</option>
-                        <option value="200" selected>200 dpi</option>
+                        <option value="150" selected>150 dpi</option>
+                        <option value="200">200 dpi</option>
                         <option value="300">300 dpi</option>
-                        <option value="400">400 dpi</option>
                     </select>
                 </div>
                 <div>
                     <label for="export-compression-select">Quality</label>
                     <select id="export-compression-select" class="css-input css-select">
                         <option value="0.5">Low</option>
-                        <option value="0.8" selected>Medium</option>
+                        <option value="0.6" selected>Standard</option>
+                        <option value="0.8">Medium</option>
                         <option value="0.9">High</option>
                     </select>
                 </div>
@@ -264,7 +265,7 @@
                 <!-- Image bg -->
                 <img id="parameter-image" src="https://via.placeholder.com/720x1080/eee?" alt="Loaded Image">
                 <!-- corners -->
-                <div id="top-left-corner" class="corner-marker" style="background-color:red;"></div>
+                <div id="top-left-corner" class="corner-marker"></div>
                 <div id="top-right-corner" class="corner-marker"></div>
                 <div id="bottom-left-corner" class="corner-marker"></div>
                 <div id="bottom-right-corner" class="corner-marker"></div>
@@ -274,6 +275,23 @@
                         <polygon id="highlight-edge-polygon"></polygon>
                     </svg>
                 </div>
+                <!-- magnifier -->
+                <div id="magnifier" class="magnifier hidden" style="background-color: grey;">
+                    <canvas id="magnifier-canvas" width="100" height="100"></canvas>
+                </div>
+                <style>
+                    .magnifier {
+                        position: absolute;
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 50%;
+                        border: 2px solid #444;
+                        overflow: hidden;
+                        z-index: 9999;
+                        pointer-events: none;
+                        box-shadow: 0 0 10px rgba(0,0,0,0.3);
+                    }
+                </style>
             </div>
             
             <!-- Color style element -->
