--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </div>
 
             <!-- BOTTOM PARAMETTERS -->
-            <div class="flex-row" style="gap: 10px;">
+            <div class="flex-row" style="gap: 10px; max-width: 400px; margin: 0 auto;">
 
                 <!-- LEFT -->
                 <div class="flex-column" style="gap: 10px">
@@ -355,7 +355,6 @@
 
                 <!-- RIGHT -->
                 <div>
-
                 </div>
             </div>
             
