Patch + clean up commented code

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 </div>
 
                 <!-- SEPARATEUR -->
-                <div class="separateur"></div>
+                <!-- <div class="separateur"></div> -->
 
                 <!-- RIGHT -->
                 <div>
