Enhance file input handling

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <!-- Download link -->
                 <a id="pdf-download-link" style="display: none"></a>
                 <!-- image -->
-                <img src="src/picto/PDF_image.png" alt="myPDF">
+                <img src="src/picto/PDF_image.png" alt="PDF">
                 <!-- input -->
                 <input id="pdf-download-name-input" type="text" class="css-input css-input-text" value="myScan.pdf" placeholder="PDF name">
                 <!-- button -->
@@ -359,7 +359,7 @@
             </div>
             
             <!-- ACTIONS -->
-            <div class="flex-row" style="margin-top: auto; gap: 5px;">
+            <div class="flex-row" style="margin-top: auto; padding-top:10px; gap: 5px;">
                 <div id="parameter-delete-button" class="my-button my-button-27px my-button-white" style="width: 80px; color:#FF7F78;">
                     <p>Delete</p>
                 </div>
