--- a/index.html
+++ b/index.html
@@ -284,23 +284,6 @@
                         <polygon id="highlight-edge-polygon"></polygon>
                     </svg>
                 </div>
-                <!-- magnifier -->
-                <div id="magnifier" class="magnifier hidden" style="background-color: grey;">
-                    <canvas id="magnifier-canvas" width="100" height="100"></canvas>
-                </div>
-                <style>
-                    .magnifier {
-                        position: absolute;
-                        width: 100px;
-                        height: 100px;
-                        border-radius: 50%;
-                        border: 2px solid #444;
-                        overflow: hidden;
-                        z-index: 9999;
-                        pointer-events: none;
-                        box-shadow: 0 0 10px rgba(0,0,0,0.3);
-                    }
-                </style>
             </div>
 
             <!-- COLOR STYLE -->
@@ -393,6 +376,24 @@
 
 
         </div>
+
+        <!-- magnifier -->
+        <div id="js-parameter-magnifier" class="css-magnifier hidden" style="background-color: grey;">
+            <canvas id="js-parameter-magnifier-canvas" width="100" height="100"></canvas>
+        </div>
+        <style>
+            .css-magnifier {
+                position: absolute;
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                border: 2px solid #444;
+                overflow: hidden;
+                z-index: 9999;
+                pointer-events: none;
+                box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            }
+        </style>
     </div>
 
 
