--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="src/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-    <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/ico/favicon-32.png">
+    <link rel="apple-touch-icon" href="src/ico/apple-touch-icon.png">
 
     <!-- STYLE -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
