Enhance file name input handling

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         function checkIOS() {
             return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
         }
-        if (checkIOS()) eruda.init();
+        // if (checkIOS()) eruda.init();
     </script>
 
 </head>
