--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <!-- image -->
                 <img src="src/picto/PDF_image.png" alt="PDF">
                 <!-- input -->
-                <input id="pdf-download-name-input" type="text" class="css-input css-input-text" value="myScan.pdf" placeholder="PDF name">
+                <input id="pdf-download-name-input" type="text" class="css-input css-input-text" style="font-size: 16px;" value="myScan.pdf" placeholder="PDF name">
                 <!-- button -->
                 <div id="pdf-download-btn" class="my-button my-button-27px my-button-black" style="margin-top: 5px;">
                     <p>Download PDF</p>
