Patch for file input functionality

--- a/index.html
+++ b/index.html
@@ -66,34 +66,37 @@
                 <p>
                     Turn your phone into a document scanner and make clean PDFs – fast, free, and 100% private. 
                     Pocket PDF works entirely in your browser, meaning your files never leave 
-                    your device. No ads, no fees, no hassle.
+                    your device.
                 </p>
                 <p class="top-title"> 
-                    <b>Private & Safe</b> 🔒 
+                    <b>Private, Safe and Free</b> 🔒 
                 </p>
                 <p>
+                    It's a simple tool built for everyone – no catches.
                     All processing happens locally. No uploads, no worries.
                     We don’t see your files, and neither does anyone else.
-                </p>
-                <p class="top-title">
-                    <b>No Fees, No Ads</b> 💸
-                </p>
-                <p>
-                    It's a free Web App. A simple tool built for everyone – no catches.
                 </p>
                 <p class="top-title">
                     <b>Easy to Use</b> 😇
                 </p>
                 <p>
-                    Drag, drop, adjust, and create your perfect PDF in just a few clicks.
+                    No login, no user name, just hit '<b>Add a Page</b>' 
+                    and create your PDF in just a few clicks.
                 </p>
                 <p class="top-title">
                     <b>Powerful Features</b> 💪
                 </p>
                 <p>
-                    Grayscale, black-and-white, or full-color options.
-                    Custom formats like A4, A5, receipts, or even cards.
-                    DPI and compression adjustments for the perfect balance of quality and size.
+                    Grayscale, black-and-white and full-color options.
+                    Custom formats "receipts", or "cards" will adapt their 
+                    height based on your document's picture.
+                </p>
+                <div class="separateur-horizontal" style="margin: 10px 0 0 0"></div>
+                <img src="/assets/app-icon.jpg" style="width: 60%; margin: 10px 0 0 0; opacity: 0.8; border-radius: 8px;">
+                <p>
+                    Want <b>Pocket PDF</b> as an iOS App ?
+                    <br>- Open Pocket PDF in <b>Safari</b>
+                    <br>- Hit <b>Share 📤</b> and <b>Add to Home Screen ⊞</b>
                 </p>
                 <style>
                     .top-title {
