Fix image source path

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     height based on your document's picture.
                 </p>
                 <div class="separateur-horizontal" style="margin: 10px 0 0 0"></div>
-                <img src="/assets/app-icon.jpg" style="width: 60%; margin: 10px 0 0 0; opacity: 0.8; border-radius: 8px;">
+                <img src="assets/app-icon.jpg" style="width: 60%; margin: 10px 0 0 0; opacity: 0.8; border-radius: 8px;">
                 <p>
                     Want <b>Pocket PDF</b> as an iOS App ?
                     <br>- Open Pocket PDF in <b>Safari</b>
