--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 </p>
                 <p>
                     It's a simple tool built for everyone – no catches.
-                    All processing happens locally. No uploads, no worries.
+                    <br>All processing happens locally. No uploads, no worries.
                     We don’t see your files, and neither does anyone else.
                 </p>
                 <p class="top-title">
                     <b>Easy to Use</b> 😇
                 </p>
                 <p>
-                    No login, no user name, just hit '<b>Add a Page</b>' 
+                    No login, no user name, just hit '<b>Add a Page</b>', select your photo 
                     and create your PDF in just a few clicks.
                 </p>
                 <p class="top-title">
@@ -88,7 +88,7 @@
                 </p>
                 <p>
                     Grayscale, black-and-white and full-color options.
-                    Custom formats "receipts", or "cards" will adapt their 
+                    Custom formats 'Receipts', or 'Cards' will adapt their 
                     height based on your document's picture.
                 </p>
                 <div class="separateur-horizontal" style="margin: 10px 0 0 0"></div>
@@ -189,7 +189,7 @@
                 <!-- image -->
                 <img src="src/picto/PDF_image.png" alt="PDF">
                 <!-- input -->
-                <input id="pdf-download-name-input" type="text" class="css-input css-input-text" style="font-size: 16px;" value="myScan.pdf" placeholder="PDF name">
+                <input id="pdf-download-name-input" type="text" class="css-input css-input-text" style="font-size: 16px; font-size-adjust: 0.47;" value="myScan.pdf" placeholder="PDF name">
                 <!-- button -->
                 <div id="pdf-download-btn" class="my-button my-button-27px my-button-black" style="margin-top: 5px;">
                     <p>Download PDF</p>
@@ -325,7 +325,7 @@
                                     <div class="slider-handle" data-input-id="white-level"></div>
                                     <!-- inputs -->
                                     <input id="black-level" type="range" min="0" max="255" value="0">
-                                    <input id="middle-level" type="range" min="0.05" max="1" step="0.05" value="0.5">
+                                    <input id="middle-level" type="range" min="0.05" max="0.95" step="0.05" value="0.5">
                                     <input id="white-level" type="range" min="0" max="255" value="255" >
                                 </div>
                                 <div id="mono-color-sliders" class="slider-group">
